src/snapshots/sel__tests__parsing-10.snap
---
source: src/tests.rs
expression: "t(b\"{{}, repeat 1}\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    0..1,
                ),
                ContextCaused {
                    error: Error(
                        Location(
                            0,
                            5..13,
                        ),
                        InfWhereFinExpected,
                    ),
                    because: TypeListInferredItemType {
                        list_item_type: List(
                            true,
                            Named(
                                "itemof(typeof({}))",
                            ),
                        ),
                    },
                },
            ),
        ],
    ),
)
