src/snapshots/sel__tests__parsing-11.snap
---
source: src/tests.rs
expression: "t(b\"{{42}, repeat 1}\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    0..1,
                ),
                ContextCaused {
                    error: Error(
                        Location(
                            0,
                            7..15,
                        ),
                        InfWhereFinExpected,
                    ),
                    because: TypeListInferredItemType {
                        list_item_type: List(
                            true,
                            Number,
                        ),
                    },
                },
            ),
        ],
    ),
)
