src/snapshots/sel__tests__parsing-14.snap
---
source: src/tests.rs
expression: "t(b\":42:, add 1\")"
---
Ok(
    (
        Number,
        Tree {
            loc: Location(
                0,
                6..11,
            ),
            ty: 0,
            value: Apply(
                Name(
                    "add",
                ),
                [
                    Tree {
                        loc: Location(
                            0,
                            10..11,
                        ),
                        ty: 0,
                        value: Number(
                            1.0,
                        ),
                    },
                    Tree {
                        loc: Location(
                            0,
                            0..4,
                        ),
                        ty: 0,
                        value: Apply(
                            Name(
                                "tonum",
                            ),
                            [
                                Tree {
                                    loc: Location(
                                        0,
                                        0..4,
                                    ),
                                    ty: 1,
                                    value: Bytes(
                                        [
                                            52,
                                            50,
                                        ],
                                    ),
                                },
                            ],
                        ),
                    },
                ],
            ),
        },
    ),
)
