src/snapshots/sel__tests__parsing-17.snap
---
source: src/tests.rs
expression: "t(b\"prout 1, caca\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    0..5,
                ),
                UnknownName {
                    name: "prout",
                    expected_type: Func(
                        Number,
                        Named(
                            "paramof(typeof(caca))=returnof(typeof(prout))",
                        ),
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    9..13,
                ),
                UnknownName {
                    name: "caca",
                    expected_type: Func(
                        Named(
                            "paramof(typeof(caca))=returnof(typeof(prout))",
                        ),
                        Named(
                            "returnof(typeof(caca))",
                        ),
                    ),
                },
            ),
        ],
    ),
)
