src/snapshots/sel__tests__parsing-18.snap
---
source: src/tests.rs
expression: "t(b\"_, split_, map_, join_\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    0..1,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Func(
                        Named(
                            "a",
                        ),
                        Bytes(
                            false,
                        ),
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    8..9,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Bytes(
                        true,
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    14..15,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Func(
                        Bytes(
                            false,
                        ),
                        Bytes(
                            false,
                        ),
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    21..22,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Bytes(
                        true,
                    ),
                },
            ),
        ],
    ),
)
