src/snapshots/sel__tests__parsing-19.snap
---
source: src/tests.rs
expression: "t(b\"{const, _, add, map}\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    8..9,
                ),
                UnknownName {
                    name: "_",
                    expected_type: Func(
                        Number,
                        Func(
                            Number,
                            Number,
                        ),
                    ),
                },
            ),
            Error(
                Location(
                    0,
                    0..1,
                ),
                ContextCaused {
                    error: Error(
                        Location(
                            0,
                            16..19,
                        ),
                        ContextCaused {
                            error: Error(
                                Location(
                                    0,
                                    16..19,
                                ),
                                ExpectedButGot {
                                    expected: Number,
                                    actual: List(
                                        false,
                                        Named(
                                            "b",
                                        ),
                                    ),
                                },
                            ),
                            because: CompleteType {
                                complete_type: Func(
                                    Func(
                                        Named(
                                            "a",
                                        ),
                                        Named(
                                            "b",
                                        ),
                                    ),
                                    Func(
                                        List(
                                            false,
                                            Named(
                                                "a",
                                            ),
                                        ),
                                        List(
                                            false,
                                            Named(
                                                "b",
                                            ),
                                        ),
                                    ),
                                ),
                            },
                        },
                    ),
                    because: TypeListInferredItemType {
                        list_item_type: Func(
                            Number,
                            Func(
                                Number,
                                Number,
                            ),
                        ),
                    },
                },
            ),
        ],
    ),
)
