src/snapshots/sel__tests__parsing-22.snap
---
source: src/tests.rs
expression: "t(b\"add 1 2 3\")"
---
Err(
    ErrorList(
        [
            Error(
                Location(
                    0,
                    0..7,
                ),
                TooManyArgs {
                    nth_arg: 3,
                    func: Name(
                        "add",
                    ),
                },
            ),
        ],
    ),
)
